<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Dawinii</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="welcome_to_">Welcome to Dawinii, let\'s get started!</string>
    <string name="sign_in_usi">Sign in using your social media account</string>
    <string name="create_an_a">Create an account so you can access our app</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="loginUserName">Enter your email adress</string>
    <string name="loginPassword">Enter your password</string>
    <string name="userName">@username</string>
    <string name="update">Update</string>
    <string name="eMailHint" translatable="false">E-mail : xxxxxx@example.com</string>
    <string name="name_hint">User Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="address_hint">Address</string>
    <string name="trust_person_hint">Trusted User</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="age">Age</string>
    <string name="Schedule">Schedule</string>
    <string name="Routines">Routines</string>
    <string name="Routine">Routine</string>
    <string name="History">History</string>
    <string name="resetPassword">Reset Password</string>
    <string name="resetPasswordHint">No worries! just enter your email below and the reset password email will be sent</string>
    <string name="resetPasswordEmailSend">Send</string>
    <string name="today_scedule">Today\'s Schedule</string>
    <string name="notification">Notification</string>
    <string name="welcome">Welcome !</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="remove">remove</string>
    <string name="welcome_to">Welcome To</string>
    <string name="add_routine">Add Routine</string>
    <string name="new_routine">New Routine</string>
    <string name="add">add</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="appointment">Appointment</string>
    <string name="routine_name">Routine Name</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="choose_type">Choose Type</string>
    <string name="routine_type">Routine Type</string>
    <string name="hair_and_skin">Hair and Skin</string>
    <string name="cardiology">Cardiology</string>
    <string name="liver">Liver</string>
    <string name="lung">Lung</string>
    <string name="male_reproductive">Male Reproductive</string>
    <string name="female_reproductive">Female Reproductive</string>
    <string name="pancreas">Pancreas</string>
    <string name="depression">Depression</string>
    <string name="brain_and_nerve">Brain and Nerve</string>
    <string name="dental">Dental</string>
    <string name="bones">Bones</string>
    <string name="urology">Urology</string>
    <string name="kidney">Kidney</string>
    <string name="spine">Spine</string>
    <string name="other">Other</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="add_medicine_dose">Dose</string>
    <string name="add_medicine_dose_count">count per day</string>
    <string name="drug_quantity">Drug Quantity</string>
    <string name="medicine_time">Medicine Time</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about_app">About App</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="submit">Submit</string>
    <string name="user_name">User Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_medicine_picture">Add Medicine Picture</string>
    <string name="login_with_google_account">Login with google account</string>
    <string name="login_with_facebook_account">Login with facebook account</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="routine_icon">Routine Icon</string>
    <string name="medicines">Medicines</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="color_blind_mode">Color blind Mode</string>
    <string name="deuteranopia" translatable="false">Deuteranopia</string>
    <string name="proteranopia" translatable="false">Proteranopia</string>
    <string name="tretanopia" translatable="false">Tretanopia</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="add_your_medicines_please">Add your medicines please</string>


    <string-array name="routine_types" tools:ignore="InconsistentArrays">
        <item>@string/bones</item>
        <item>@string/brain_and_nerve</item>
        <item>@string/cardiology</item>
        <item>@string/dental</item>
        <item>@string/depression</item>
        <item>@string/female_reproductive</item>
        <item>@string/hair_and_skin</item>
        <item>@string/kidney</item>
        <item>@string/liver</item>
        <item>@string/lung</item>
        <item>@string/male_reproductive</item>
        <item>@string/pancreas</item>
        <item>@string/spine</item>
        <item>@string/urology</item>
        <item>@string/other</item>
    </string-array>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="please_add_your_routines" translatable="false">Please add your routines</string>
    <string name="doctor_s_note">Doctor\'s Note</string>
    <string name="your_previous_medicines_analysis_and_doctor_notes">Your previous medicines, analysis \nand doctor notes</string>
    <string name="analysis">Analysis</string>
    <string name="statistics">Statistics</string>
    <string name="extract_pdf">Extract PDF</string>
    <string name="pdf">PDF</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="note_added_successfully">Note added successfully</string>
    <string name="about_dawinii">About Dawinii</string>
    <string name="about_dawinii_cvfjnvkfd">The main goal of our application is to help people who has drug routine
to remember the time to take their medicine by sending alarm to them
at that time.
Also the application has many features which make the app more reliable
</string>
    <string name="_22_years">22 years</string>
    <string name="let_s_get_started">Let\'s get started !</string>
    <string name="welcome_to_dawinii">Welcome to Dawinii</string>
    <string name="forget_your_password">Forget your password ?</string>
    <string name="ringtone">Ringtone</string>
    <string name="add_analysis">Add Analysis</string>

</resources>