<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/fragment_background"
    tools:context=".authentication.signUpFragment">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#257044"
        android:textSize="50sp"
        android:fontFamily="@font/mada_bold"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/tvWelcome_to_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manjari_regular"
        android:gravity="center"
        android:text="@string/create_an_a"
        android:textColor="#ABABBF"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_margin="2dp"
            android:id="@+id/etFirstName"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/firstName"
            style="@style/et"
            />

        <EditText
            android:layout_margin="2dp"
            android:id="@+id/etLastName"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/lastName"
            style="@style/et" />
    </LinearLayout>

    <EditText
        android:id="@+id/etSignUpEmail"
        style="@style/et"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/eMailHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etSignUpPassword"
        style="@style/et"
        android:layout_width="match_parent"
        android:contextClickable="false"
        app:endIconMode="password_toggle"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etSignUpRePassword"
        android:layout_width="match_parent"
        style="@style/et"
        app:endIconMode="password_toggle"
        android:hint="@string/confirm_password"
        android:ems="10"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/etSignUpAge"
        android:layout_width="match_parent"
        style="@style/et"
        android:hint="@string/age"
        android:ems="10"
        android:inputType="number" />


    <RadioGroup
        android:id="@+id/rbgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:buttonTint="@color/primaryColor"
            android:fontFamily="@font/manjari_bold"
            android:text="Male"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:buttonTint="@color/primaryColor"
            android:fontFamily="@font/manjari_bold"
            android:text="Female"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        style="@style/button"
        android:layout_marginBottom="12dp"
        android:text="@string/sign_up" />

</LinearLayout>