<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp"
    android:orientation="vertical"
    android:background="@drawable/fragment_background"
    tools:context=".view.authentication.logInFragment">


    <TextView
        android:id="@+id/tvLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mada_bold"
        android:textColor="#257044"
        android:text="@string/resetPassword"
        android:textSize="36sp"
        />

    <TextView
        android:id="@+id/tvWelcome_to_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manjari_regular"
        android:gravity="center"
        android:text="@string/resetPasswordHint"
        android:textColor="#ABABBF"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etResetPasswordEmail"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/loginUserName"
        android:inputType="textEmailAddress"
        style="@style/et"
        android:textColorHint="#4702013E"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetPasswordEmailSendBtn"
        style="@style/button"
        android:layout_marginTop="16dp"
        android:layout_width="120dp"
        android:layout_gravity="end"
        android:text="@string/resetPasswordEmailSend" />

</LinearLayout>