<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/medicineNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/captureMedicine"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:layout_marginEnd="8dp"
            android:background="#00000000"
            app:srcCompat="@drawable/add_photo"
            android:contentDescription="@string/add_medicine_picture"
            app:tint="@color/primaryColor" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_add_medicine_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            style="@style/routine_et"
            android:hint="@string/medicine_name"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dose_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/medicineNameLayout">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_dose"
            style="@style/routine_et"
            android:layout_width="0dp"
            android:hint="@string/add_medicine_dose"
            android:layout_weight="1"
            android:inputType="number"
            android:layout_marginEnd="5dp"
            android:padding="16dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_dose_count"
            android:layout_width="0dp"
            style="@style/routine_et"
            android:hint="@string/add_medicine_dose_count"
            android:layout_weight="1"
            android:padding="16dp"
            android:inputType="number"

            android:layout_marginStart="5dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drug_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dose_linear_layout">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_drug_quantity"
            style="@style/routine_et"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:hint="@string/drug_quantity"
            android:layout_weight="3"
            android:inputType="number"
            android:layout_marginEnd="5dp"
            android:padding="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ringtone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ringtone"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:layout_weight="2"
            android:background="@drawable/btn_background"
            android:drawableStart="@drawable/microphone_2"
            android:paddingStart="16dp"
            android:drawablePadding="-24dp"
            android:textColor="@color/white"
            android:fontFamily="@font/manjari_bold" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_medicine_time"
        style="@style/buttons_in_add_routine_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicine_time"
        android:layout_weight="1"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/drug_linear_layout"
        android:layout_marginTop="12dp"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_medicine_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/mada_bold"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_medicine_time"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>