<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/fragment_background_color"
    tools:context=".view.drawer.EditProfileActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/app_background_small"
        android:backgroundTintMode="multiply"
        android:hapticFeedbackEnabled="false">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/profile"
                app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
                app:titleTextColor="@color/white"
                app:titleTextAppearance="@style/toolbar_title"/>
        </com.google.android.material.appbar.MaterialToolbar>
    </FrameLayout>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="-100dp"
        android:scaleType="center"
        android:background="@color/primaryColor"
        android:src="@drawable/baseline_person_24"
        app:shapeAppearanceOverlay="@style/Circular" />

    <EditText
        android:id="@+id/etProfileName"
        style="@style/et"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etProfilePhone"
        style="@style/et"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etProfileAddress"
        style="@style/et"
        android:layout_width="match_parent"
        android:ems="10"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/address_hint"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/etProfileTrustedPerson"
        android:layout_width="match_parent"
        style="@style/et"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/trust_person_hint"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etProfileAge"
        android:layout_width="match_parent"
        style="@style/et"
        android:hint="@string/age"
        android:ems="10"
        android:layout_marginHorizontal="16dp"
        android:inputType="number" />


    <RadioGroup
        android:id="@+id/rbgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:buttonTint="@color/primaryColor"
            android:fontFamily="@font/manjari_bold"
            android:text="Male"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:buttonTint="@color/primaryColor"
            android:fontFamily="@font/manjari_bold"
            android:text="Female"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnProfileUpdate"
        android:layout_marginHorizontal="16dp"
        style="@style/button"
        android:layout_marginVertical="16dp"
        android:text="@string/update" />

</LinearLayout>