<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/margin32"
    android:paddingHorizontal="16dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_doctor_name"
        style="@style/routine_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/doctor_name"
        android:textSize="@dimen/size_medium"
        android:textColorHint="#eee"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appointment_date"
        style="@style/buttons_in_add_routine_fragment"
        android:layout_width="0dp"
        android:paddingVertical="@dimen/margin16"
        android:text="@string/appointment_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_doctor_name"
        android:paddingStart="18dp"
        android:layout_marginTop="@dimen/margin16"
        android:textAllCaps="false" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appointment_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingVertical="@dimen/margin16"
        style="@style/buttons_in_add_routine_fragment"
        android:text="@string/appointment_time"
        android:paddingStart="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appointment_date"
        android:layout_marginTop="@dimen/margin16"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/mada_bold"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appointment_time" />


</androidx.constraintlayout.widget.ConstraintLayout>
